kubernetes/services/media/sonarr/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingressroute
  namespace: media
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sonarr.kube.eggenberg.io`)
    kind: Rule
    services:
    - name: sonarr
      port: 8989
  tls:
    secretName: sonarr-certificate-secret
